labo6/labo6-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-500
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target-500
  template:
    metadata:
      labels:
        app: target-500
        group: target
    spec:
      containers:
        - name: target-500
          image: h2so40627/httpresponsetester:v0.1.1
          ports:
            - containerPort: 80
          args:
            - "500"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-502
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target-502
  template:
    metadata:
      labels:
        app: target-502
        group: target
    spec:
      containers:
        - name: target-502
          image: h2so40627/httpresponsetester:v0.1.1
          ports:
            - containerPort: 80
          args:
            - "502"
---
apiVersion: v1
kind: Service
metadata:
  name: target-500
  labels:
    app: target-500
    service: target-500
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: target-500
---
apiVersion: v1
kind: Service
metadata:
  name: target-502
  labels:
    app: target-502
    service: target-502
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: target-502
